The Opening Hours link no longer worked. This has been repaired and the shift point has been moved to the top.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,6 +241,14 @@ text-align: left;
     text-align: left;
 }
 
+.anker-position::before {
+content: "";
+height: 120px;
+margin-top: -120px;
+visibility: hidden;
+}
+
+
 /* Styles the How you can fine us section*/
 #finde-us {
     text-align: left;
